@@ -1,0 +1,44 @@
+// Copyright (C) 2019 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+// { dg-options "-std=gnu++17" }
+// { dg-do run { target c++17 } }
+
+#include <algorithm>
+#include <debug/vector>
+#include <debug/list>
+
+void
+test01()
+{
+  __gnu_debug::vector<int> v{1, 2, 3};
+  std::for_each_n(v.begin(), -2, [](int){});
+}
+
+void
+test02()
+{
+  __gnu_debug::list<int> l{1, 2, 3};
+  std::for_each_n(l.begin(), -2, [](int){});
+}
+
+int
+main()
+{
+  test01();
+  test02();
+}
