@@ -1,3 +1,8 @@
+2019-11-07  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/stl_algo.h (for_each_n): Handle negative count.
+	* testsuite/25_algorithms/for_each/for_each_n_debug.cc: New test.
+
 2019-11-07  Jason Merrill  <jason@redhat.com>
 
 	* libsupc++/compare: Remove strong_equality and weak_equality.
